--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 
     </main><!-- End #main -->
 
-        <footer class="footer" role="contentinfo">
+    <footer class="footer" role="contentinfo">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
@@ -452,7 +452,7 @@
         </div>
     </footer>
     <!-- ======= Footer ======= -->
-
+    <a href="https://info.flagcounter.com/l15G"><img src="https://s01.flagcounter.com/count2/l15G/bg_FFFFFF/txt_000000/border_CCCCCC/columns_5/maxflags_250/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
     <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
     <!-- Vendor JS Files -->
